# AQUAPHYTO

./: .gitignore  README.md  pyproject.toml
data/processed/: REFERENCE_DATASET_4_WP2_RT1_2024.csv  chime_summary_table.csv  dataset_chime_05_belgium.csv  dataset_chime_05_meas_01.csv  dataset_chime_10_belgium.csv  dataset_chime_10_meas_01.csv
data/processed/figures_aquatime/: aquatime_summary_table.csv
data/raw/: Hypstar_radiometric_23-24.csv  belgian_coast_all.csv
data/raw/CHIME/: AQUATIME_D2.1.0_RD-belgian-coast-chime-convolved-10nm-v0.1.csv  AQUATIME_D2.1.0_RD-belgian-coast-chime-convolved-5nm-v0.1.csv  AQUATIME_D2.1.0_RD-belgian-coast-lstm-convolved-v0.1.csv  chime_05_belgium  chime_05_meas_01  chime_10_belgium  (+1 more)
figures/figures_aquatime/: chime_rt1_summary_table.csv
notebooks/: 01_build_datacube.ipynb  02_make_dataset.ipynb  03_analysis_visualization.ipynb  04_compare_chime_raw_vs_convolved.ipynb  04_process_clean_rhow.ipynb  05_compare_chime_files.ipynb  05_cyano_normalization_sensitivity.ipynb  06_aquatime_csv_analysis.ipynb  07_chime_raw_conv_rt1_comparison.ipynb  08_cyano_normalization_analysis.ipynb  08_date_analysis.ipynb  compare_chime_raw_vs_convolved.ipynb  compare_chime_raw_vs_convolved_finalv3.ipynb  compare_chime_raw_vs_convolvedv2.ipynb  compare_chime_raw_vs_csv.ipynb  compare_chime_raw_vs_csv_updated.ipynb  compare_chime_raw_vs_csv_updated_v3.ipynb  cyano_normalization_test.ipynb  normalization_test.ipynb
notebooks/wp2_cs3/: 01_lake_sb_wisp_tests.ipynb  05_cyano_normalization_sensitivity.ipynb  README.md
phytospec/: algorithms.py  config.py
(+2504 files in other folders)
